fix: broken style

--- a/apps/landing/src/styles/globals.css
+++ b/apps/landing/src/styles/globals.css
@@ -15,10 +15,10 @@ a {
   text-decoration: none;
 }
 
-html,
+/* html,
 body,
 body > div:first-child,
 div#__next,
 div#__next > div {
   height: 100%;
-}
+} */
